--- a/archives/toutiao-search/2024-02-19.md
+++ b/archives/toutiao-search/2024-02-19.md
@@ -1,59 +1,84 @@
 # 2024-02-19
 
-共 308 条
+共 327 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Feb 19 2024 21:01:27 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Feb 19 2024 22:00:54 GMT+0800 (China Standard Time) -->
+1. [梅西出镜回应香港行未上场](https://so.toutiao.com/search?keyword=梅西出镜回应香港行未上场)
 1. [俄军在阿夫杰耶夫卡缴获西方武器](https://so.toutiao.com/search?keyword=俄军在阿夫杰耶夫卡缴获西方武器)
-1. [刘雨欣洛杉矶家被偷空 损失千万](https://so.toutiao.com/search?keyword=刘雨欣洛杉矶家被偷空+损失千万)
 1. [一组数据看龙年的活力中国](https://so.toutiao.com/search?keyword=一组数据看龙年的活力中国)
 1. [学校通报女教师被指出轨学生：停职](https://so.toutiao.com/search?keyword=学校通报女教师被指出轨学生：停职)
+1. [储殷分析俄军攻占阿夫杰耶夫卡价值](https://so.toutiao.com/search?keyword=储殷分析俄军攻占阿夫杰耶夫卡价值)
 1. [男子连续11天偷彩票兑奖 店家报警](https://so.toutiao.com/search?keyword=男子连续11天偷彩票兑奖+店家报警)
-1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
-1. [车厘子是大号樱桃吗](https://so.toutiao.com/search?keyword=车厘子是大号樱桃吗)
+1. [刘雨欣洛杉矶家被偷空 损失千万](https://so.toutiao.com/search?keyword=刘雨欣洛杉矶家被偷空+损失千万)
 1. [王小洪同美国土安全部长举行会晤](https://so.toutiao.com/search?keyword=王小洪同美国土安全部长举行会晤)
+1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
+1. [海鲜与水果同食会中毒？谣言](https://so.toutiao.com/search?keyword=海鲜与水果同食会中毒？谣言)
+1. [放射肿瘤学专家王小虎教授逝世](https://so.toutiao.com/search?keyword=放射肿瘤学专家王小虎教授逝世)
+1. [乌军南部前线传来“捷报”](https://so.toutiao.com/search?keyword=乌军南部前线传来“捷报”)
+1. [比亚迪海豚荣耀版2月23日上市](https://so.toutiao.com/search?keyword=比亚迪海豚荣耀版2月23日上市)
+1. [已婚女子爱上顺风车车主被骗近20万](https://so.toutiao.com/search?keyword=已婚女子爱上顺风车车主被骗近20万)
+1. [春节后3000多箱龙年磁吸春联被销毁](https://so.toutiao.com/search?keyword=春节后3000多箱龙年磁吸春联被销毁)
+1. [7.98万的比亚迪让燃油车慌了](https://so.toutiao.com/search?keyword=7.98万的比亚迪让燃油车慌了)
+1. [证监会：严把IPO准入关](https://so.toutiao.com/search?keyword=证监会：严把IPO准入关)
+1. [张颂文姚安娜《猎冰》21日开播](https://so.toutiao.com/search?keyword=张颂文姚安娜《猎冰》21日开播)
+1. [河南进入雨雪最强时段](https://so.toutiao.com/search?keyword=河南进入雨雪最强时段)
+1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
+1. [贾玲片场减肥餐：荞麦面和水煮青菜](https://so.toutiao.com/search?keyword=贾玲片场减肥餐：荞麦面和水煮青菜)
+1. [小孩哥裤子边走边掉](https://so.toutiao.com/search?keyword=小孩哥裤子边走边掉)
+1. [山东男子实名举报妻子虐待婆婆致死](https://so.toutiao.com/search?keyword=山东男子实名举报妻子虐待婆婆致死)
+1. [Sora在二级市场刮起“腥风血雨”](https://so.toutiao.com/search?keyword=Sora在二级市场刮起“腥风血雨”)
+1. [21岁晨跑女孩遇害案凶手被执行死刑](https://so.toutiao.com/search?keyword=21岁晨跑女孩遇害案凶手被执行死刑)
+1. [俄乌前线还有哪些关键之战值得注意](https://so.toutiao.com/search?keyword=俄乌前线还有哪些关键之战值得注意)
+1. [贾玲更换统一公式照](https://so.toutiao.com/search?keyword=贾玲更换统一公式照)
+1. [贾玲坦言现在想通了要更爱自己](https://so.toutiao.com/search?keyword=贾玲坦言现在想通了要更爱自己)
+1. [媒体评年轻人宁愿找搭子也不走亲戚](https://so.toutiao.com/search?keyword=媒体评年轻人宁愿找搭子也不走亲戚)
+1. [女网红海底捞拍不雅照 4人被刑拘](https://so.toutiao.com/search?keyword=女网红海底捞拍不雅照+4人被刑拘)
 1. [AI生成的《西游记》短片](https://so.toutiao.com/search?keyword=AI生成的《西游记》短片)
+1. [男子举报妻子与副镇长非法同居](https://so.toutiao.com/search?keyword=男子举报妻子与副镇长非法同居)
+1. [兵马俑景区交警带游客冲刺式过马路](https://so.toutiao.com/search?keyword=兵马俑景区交警带游客冲刺式过马路)
+1. [高合汽车“倒下” 下一个轮到谁](https://so.toutiao.com/search?keyword=高合汽车“倒下”+下一个轮到谁)
+1. [两名日本人因偷井盖被捕](https://so.toutiao.com/search?keyword=两名日本人因偷井盖被捕)
+1. [老凤祥回应清理金手镯被擦掉logo](https://so.toutiao.com/search?keyword=老凤祥回应清理金手镯被擦掉logo)
+1. [土味短剧太上头了](https://so.toutiao.com/search?keyword=土味短剧太上头了)
+1. [媒体评零点后下高速按全程收费](https://so.toutiao.com/search?keyword=媒体评零点后下高速按全程收费)
+1. [市监局介入老凤祥清洗金镯蹭掉logo](https://so.toutiao.com/search?keyword=市监局介入老凤祥清洗金镯蹭掉logo)
+1. [比亚迪打响龙年车市价格战第一枪](https://so.toutiao.com/search?keyword=比亚迪打响龙年车市价格战第一枪)
+1. [李思思复工](https://so.toutiao.com/search?keyword=李思思复工)
+1. [崔康熙：与川崎的比赛会竭尽全力](https://so.toutiao.com/search?keyword=崔康熙：与川崎的比赛会竭尽全力)
+1. [《大理寺少卿游》ost阵容](https://so.toutiao.com/search?keyword=《大理寺少卿游》ost阵容)
+1. [直击福建长乐游神“天花板”](https://so.toutiao.com/search?keyword=直击福建长乐游神“天花板”)
+1. [足球报：泰山队次回合取胜便有机会](https://so.toutiao.com/search?keyword=足球报：泰山队次回合取胜便有机会)
+1. [深鞠躬告别的原市委书记被双开](https://so.toutiao.com/search?keyword=深鞠躬告别的原市委书记被双开)
+1. [对乌军事支持成慕安会焦点](https://so.toutiao.com/search?keyword=对乌军事支持成慕安会焦点)
+1. [媒体评农业测产一测就破纪录怪象](https://so.toutiao.com/search?keyword=媒体评农业测产一测就破纪录怪象)
+1. [湖南“解放思想大讨论”是变革前奏吗](https://so.toutiao.com/search?keyword=湖南“解放思想大讨论”是变革前奏吗)
+1. [马面裙海外“圈粉”](https://so.toutiao.com/search?keyword=马面裙海外“圈粉”)
+1. [车厘子是大号樱桃吗](https://so.toutiao.com/search?keyword=车厘子是大号樱桃吗)
 1. [派出所辟谣中学生返校途中突然跳河](https://so.toutiao.com/search?keyword=派出所辟谣中学生返校途中突然跳河)
 1. [格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=格力集团迎来“新掌门”)
-1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
 1. [警方回应男子走应急车道骂路人蝼蚁](https://so.toutiao.com/search?keyword=警方回应男子走应急车道骂路人蝼蚁)
-1. [21岁晨跑女孩遇害案凶手被执行死刑](https://so.toutiao.com/search?keyword=21岁晨跑女孩遇害案凶手被执行死刑)
-1. [女网红海底捞拍不雅照 4人被刑拘](https://so.toutiao.com/search?keyword=女网红海底捞拍不雅照+4人被刑拘)
 1. [6楼邻居撬锁把5楼装修完](https://so.toutiao.com/search?keyword=6楼邻居撬锁把5楼装修完)
-1. [放射肿瘤学专家王小虎教授逝世](https://so.toutiao.com/search?keyword=放射肿瘤学专家王小虎教授逝世)
 1. [97岁奶奶吃草莓五官被酸成一团](https://so.toutiao.com/search?keyword=97岁奶奶吃草莓五官被酸成一团)
 1. [普京称已准备好和平解决乌克兰冲突](https://so.toutiao.com/search?keyword=普京称已准备好和平解决乌克兰冲突)
 1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
-1. [7.98万的比亚迪让燃油车慌了](https://so.toutiao.com/search?keyword=7.98万的比亚迪让燃油车慌了)
 1. [当爸爸说电视只能在沙发上看](https://so.toutiao.com/search?keyword=当爸爸说电视只能在沙发上看)
-1. [张颂文姚安娜《猎冰》21日开播](https://so.toutiao.com/search?keyword=张颂文姚安娜《猎冰》21日开播)
 1. [重大刑案嫌疑人刘锋强落网](https://so.toutiao.com/search?keyword=重大刑案嫌疑人刘锋强落网)
-1. [高合汽车“倒下” 下一个轮到谁](https://so.toutiao.com/search?keyword=高合汽车“倒下”+下一个轮到谁)
-1. [男子举报妻子与副镇长非法同居](https://so.toutiao.com/search?keyword=男子举报妻子与副镇长非法同居)
 1. [乌议员：若不能入约就必须制造核弹](https://so.toutiao.com/search?keyword=乌议员：若不能入约就必须制造核弹)
 1. [韩国瑜向台立法机构职员说重话](https://so.toutiao.com/search?keyword=韩国瑜向台立法机构职员说重话)
-1. [河南进入雨雪最强时段](https://so.toutiao.com/search?keyword=河南进入雨雪最强时段)
-1. [储殷分析俄军攻占阿夫杰耶夫卡价值](https://so.toutiao.com/search?keyword=储殷分析俄军攻占阿夫杰耶夫卡价值)
 1. [韩国瑜首度政党协商失败](https://so.toutiao.com/search?keyword=韩国瑜首度政党协商失败)
 1. [金晨胡夏挽手遛狗](https://so.toutiao.com/search?keyword=金晨胡夏挽手遛狗)
-1. [小孩哥裤子边走边掉](https://so.toutiao.com/search?keyword=小孩哥裤子边走边掉)
-1. [深鞠躬告别的原市委书记被双开](https://so.toutiao.com/search?keyword=深鞠躬告别的原市委书记被双开)
 1. [刘雨欣回应洛杉矶家中被盗](https://so.toutiao.com/search?keyword=刘雨欣回应洛杉矶家中被盗)
 1. [证监会：认真对待各方面的意见建议](https://so.toutiao.com/search?keyword=证监会：认真对待各方面的意见建议)
 1. [港商张杰离世为何让浙江一城动容](https://so.toutiao.com/search?keyword=港商张杰离世为何让浙江一城动容)
 1. [《大理寺少卿游》定档](https://so.toutiao.com/search?keyword=《大理寺少卿游》定档)
 1. [龙年第一只新股申购](https://so.toutiao.com/search?keyword=龙年第一只新股申购)
-1. [市监局介入老凤祥清洗金镯蹭掉logo](https://so.toutiao.com/search?keyword=市监局介入老凤祥清洗金镯蹭掉logo)
 1. [曝姆巴佩团队接受了巨额降薪](https://so.toutiao.com/search?keyword=曝姆巴佩团队接受了巨额降薪)
 1. [乌军退出重镇向西方释放何种信息](https://so.toutiao.com/search?keyword=乌军退出重镇向西方释放何种信息)
-1. [老凤祥回应清理金手镯被擦掉logo](https://so.toutiao.com/search?keyword=老凤祥回应清理金手镯被擦掉logo)
 1. [东部全明星队每人获10万美金](https://so.toutiao.com/search?keyword=东部全明星队每人获10万美金)
-1. [山东男子实名举报妻子虐待婆婆致死](https://so.toutiao.com/search?keyword=山东男子实名举报妻子虐待婆婆致死)
 1. [朱婷希望以最佳状态回归女排](https://so.toutiao.com/search?keyword=朱婷希望以最佳状态回归女排)
 1. [俄称北约军人在乌当雇佣兵操纵武器](https://so.toutiao.com/search?keyword=俄称北约军人在乌当雇佣兵操纵武器)
 1. [媒体：欧洲对巴以问题与美分歧渐显](https://so.toutiao.com/search?keyword=媒体：欧洲对巴以问题与美分歧渐显)
-1. [李思思复工](https://so.toutiao.com/search?keyword=李思思复工)
-1. [两名日本人因偷井盖被捕](https://so.toutiao.com/search?keyword=两名日本人因偷井盖被捕)
 1. [新疆民警10级风吹雪中救援被冻成冰人](https://so.toutiao.com/search?keyword=新疆民警10级风吹雪中救援被冻成冰人)
 1. [男子离世前一秒还在玩手机](https://so.toutiao.com/search?keyword=男子离世前一秒还在玩手机)
 1. [探寻历史长河中的雨水之“源”](https://so.toutiao.com/search?keyword=探寻历史长河中的雨水之“源”)
@@ -61,15 +86,12 @@
 1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
 1. [俄军称完全控制阿夫杰耶夫卡焦化厂](https://so.toutiao.com/search?keyword=俄军称完全控制阿夫杰耶夫卡焦化厂)
 1. [冯唐：贾玲要是我妹我会担心的](https://so.toutiao.com/search?keyword=冯唐：贾玲要是我妹我会担心的)
-1. [贾玲片场减肥餐：荞麦面和水煮青菜](https://so.toutiao.com/search?keyword=贾玲片场减肥餐：荞麦面和水煮青菜)
 1. [俄攻陷乌军事堡垒震动美欧](https://so.toutiao.com/search?keyword=俄攻陷乌军事堡垒震动美欧)
 1. [券商：Sora实现AIGC里程碑式进展](https://so.toutiao.com/search?keyword=券商：Sora实现AIGC里程碑式进展)
 1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
-1. [已婚女子爱上顺风车车主被骗近20万](https://so.toutiao.com/search?keyword=已婚女子爱上顺风车车主被骗近20万)
 1. [中方呼吁以色列尽快停止军事行动](https://so.toutiao.com/search?keyword=中方呼吁以色列尽快停止军事行动)
 1. [武汉将迎雷暴大风小冰雹天气](https://so.toutiao.com/search?keyword=武汉将迎雷暴大风小冰雹天气)
 1. [菲称中国渔民使用氰化物 中方驳斥](https://so.toutiao.com/search?keyword=菲称中国渔民使用氰化物+中方驳斥)
-1. [贾玲更换统一公式照](https://so.toutiao.com/search?keyword=贾玲更换统一公式照)
 1. [一艘英国注册货船在也门附近遭袭](https://so.toutiao.com/search?keyword=一艘英国注册货船在也门附近遭袭)
 1. [官方回应傅园慧同经历游客维权未解决](https://so.toutiao.com/search?keyword=官方回应傅园慧同经历游客维权未解决)
 1. [被举报出轨学生女教师或不涉犯罪](https://so.toutiao.com/search?keyword=被举报出轨学生女教师或不涉犯罪)
@@ -81,12 +103,10 @@
 1. [专家：大陆涉台管治新常态逐步形成](https://so.toutiao.com/search?keyword=专家：大陆涉台管治新常态逐步形成)
 1. [航拍新疆狼群刨雪前行](https://so.toutiao.com/search?keyword=航拍新疆狼群刨雪前行)
 1. [泉州红会将陪家属处理渔船事件善后](https://so.toutiao.com/search?keyword=泉州红会将陪家属处理渔船事件善后)
-1. [比亚迪海豚荣耀版2月23日上市](https://so.toutiao.com/search?keyword=比亚迪海豚荣耀版2月23日上市)
 1. [陈思诚佟丽娅携儿子外出游玩](https://so.toutiao.com/search?keyword=陈思诚佟丽娅携儿子外出游玩)
 1. [女孩误喝防冻液医生开5瓶白酒解毒](https://so.toutiao.com/search?keyword=女孩误喝防冻液医生开5瓶白酒解毒)
 1. [两年了 俄乌冲突前景是否逐渐明朗](https://so.toutiao.com/search?keyword=两年了+俄乌冲突前景是否逐渐明朗)
 1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
-1. [比亚迪打响龙年车市价格战第一枪](https://so.toutiao.com/search?keyword=比亚迪打响龙年车市价格战第一枪)
 1. [撒贝宁“打镲”](https://so.toutiao.com/search?keyword=撒贝宁“打镲”)
 1. [2名学生全年在图书馆学习342天](https://so.toutiao.com/search?keyword=2名学生全年在图书馆学习342天)
 1. [女子称楼上邻居装修搞错楼层](https://so.toutiao.com/search?keyword=女子称楼上邻居装修搞错楼层)
@@ -134,7 +154,6 @@
 1. [格力电器仍由董明珠掌舵](https://so.toutiao.com/search?keyword=格力电器仍由董明珠掌舵)
 1. [A股迎龙年开门红](https://so.toutiao.com/search?keyword=A股迎龙年开门红)
 1. [中国银行原董事长刘连舸被公诉](https://so.toutiao.com/search?keyword=中国银行原董事长刘连舸被公诉)
-1. [湖南“解放思想大讨论”是变革前奏吗](https://so.toutiao.com/search?keyword=湖南“解放思想大讨论”是变革前奏吗)
 1. [店家吐槽顾客一家租6套汉服后失联](https://so.toutiao.com/search?keyword=店家吐槽顾客一家租6套汉服后失联)
 1. [男子连续11天刮刮乐兑奖 老板娘报警](https://so.toutiao.com/search?keyword=男子连续11天刮刮乐兑奖+老板娘报警)
 1. [爷爷嘱咐孙子一定要把奶奶照顾好](https://so.toutiao.com/search?keyword=爷爷嘱咐孙子一定要把奶奶照顾好)
