--- a/archives/toutiao-search/2024-02-20.md
+++ b/archives/toutiao-search/2024-02-20.md
@@ -1,59 +1,70 @@
 # 2024-02-20
 
-共 97 条
+共 103 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Feb 20 2024 06:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 20 2024 07:00:39 GMT+0800 (China Standard Time) -->
 1. [梅西出镜回应香港行未上场](https://so.toutiao.com/search?keyword=梅西出镜回应香港行未上场)
 1. [刘雨欣洛杉矶家被偷空 损失千万](https://so.toutiao.com/search?keyword=刘雨欣洛杉矶家被偷空+损失千万)
 1. [春节消费热潮彰显中国经济活力](https://so.toutiao.com/search?keyword=春节消费热潮彰显中国经济活力)
-1. [学校通报女教师被指出轨学生：停职](https://so.toutiao.com/search?keyword=学校通报女教师被指出轨学生：停职)
-1. [刘雨欣回应洛杉矶家中被盗](https://so.toutiao.com/search?keyword=刘雨欣回应洛杉矶家中被盗)
-1. [21岁晨跑女孩遇害案凶手被执行死刑](https://so.toutiao.com/search?keyword=21岁晨跑女孩遇害案凶手被执行死刑)
-1. [春节后3000多箱龙年磁吸春联被销毁](https://so.toutiao.com/search?keyword=春节后3000多箱龙年磁吸春联被销毁)
-1. [两名日本人因偷井盖被捕](https://so.toutiao.com/search?keyword=两名日本人因偷井盖被捕)
+1. [学校通报“女教师出轨学生”](https://so.toutiao.com/search?keyword=学校通报“女教师出轨学生”)
+1. [专家解读大陆海警厦金海域执法行动](https://so.toutiao.com/search?keyword=专家解读大陆海警厦金海域执法行动)
 1. [7.98万的比亚迪让燃油车慌了](https://so.toutiao.com/search?keyword=7.98万的比亚迪让燃油车慌了)
-1. [海鲜与水果同食会中毒？谣言](https://so.toutiao.com/search?keyword=海鲜与水果同食会中毒？谣言)
-1. [6楼邻居撬锁把5楼装修完](https://so.toutiao.com/search?keyword=6楼邻居撬锁把5楼装修完)
-1. [贾静雯回应梧桐妹戴唇环舌环](https://so.toutiao.com/search?keyword=贾静雯回应梧桐妹戴唇环舌环)
-1. [重大刑案嫌疑人刘锋强落网](https://so.toutiao.com/search?keyword=重大刑案嫌疑人刘锋强落网)
-1. [男子举报妻子与副镇长非法同居](https://so.toutiao.com/search?keyword=男子举报妻子与副镇长非法同居)
-1. [男子连续11天偷彩票兑奖 店家报警](https://so.toutiao.com/search?keyword=男子连续11天偷彩票兑奖+店家报警)
+1. [21岁晨跑女孩遇害案凶手被执行死刑](https://so.toutiao.com/search?keyword=21岁晨跑女孩遇害案凶手被执行死刑)
 1. [女网红海底捞拍不雅照 4人被刑拘](https://so.toutiao.com/search?keyword=女网红海底捞拍不雅照+4人被刑拘)
-1. [比亚迪打响龙年车市价格战第一枪](https://so.toutiao.com/search?keyword=比亚迪打响龙年车市价格战第一枪)
-1. [市监局介入老凤祥清洗金镯蹭掉logo](https://so.toutiao.com/search?keyword=市监局介入老凤祥清洗金镯蹭掉logo)
-1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
-1. [媒体评零点后下高速按全程收费](https://so.toutiao.com/search?keyword=媒体评零点后下高速按全程收费)
-1. [长安启源A05降价 7.89万元起售](https://so.toutiao.com/search?keyword=长安启源A05降价+7.89万元起售)
-1. [官方回应“棋王邓有邦”流浪街头](https://so.toutiao.com/search?keyword=官方回应“棋王邓有邦”流浪街头)
-1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
-1. [俄攻陷乌军事堡垒震动美欧](https://so.toutiao.com/search?keyword=俄攻陷乌军事堡垒震动美欧)
-1. [党校回应文史教师岗位需运动员证书](https://so.toutiao.com/search?keyword=党校回应文史教师岗位需运动员证书)
+1. [男子举报妻子与副镇长非法同居](https://so.toutiao.com/search?keyword=男子举报妻子与副镇长非法同居)
+1. [海鲜与水果同食会中毒？谣言](https://so.toutiao.com/search?keyword=海鲜与水果同食会中毒？谣言)
+1. [春节后3000多箱龙年磁吸春联被销毁](https://so.toutiao.com/search?keyword=春节后3000多箱龙年磁吸春联被销毁)
+1. [6楼邻居撬锁把5楼装修完](https://so.toutiao.com/search?keyword=6楼邻居撬锁把5楼装修完)
+1. [男子连续11天偷彩票兑奖 店家报警](https://so.toutiao.com/search?keyword=男子连续11天偷彩票兑奖+店家报警)
 1. [AI生成的《西游记》短片](https://so.toutiao.com/search?keyword=AI生成的《西游记》短片)
-1. [张颂文姚安娜《猎冰》21日开播](https://so.toutiao.com/search?keyword=张颂文姚安娜《猎冰》21日开播)
+1. [市监局介入老凤祥清洗金镯蹭掉logo](https://so.toutiao.com/search?keyword=市监局介入老凤祥清洗金镯蹭掉logo)
+1. [比亚迪打响龙年车市价格战第一枪](https://so.toutiao.com/search?keyword=比亚迪打响龙年车市价格战第一枪)
+1. [已婚女子爱上顺风车车主被骗近20万](https://so.toutiao.com/search?keyword=已婚女子爱上顺风车车主被骗近20万)
+1. [十几辆车快速路爆胎有人发修车名片](https://so.toutiao.com/search?keyword=十几辆车快速路爆胎有人发修车名片)
+1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
+1. [杨迪爆改鼠系帅哥](https://so.toutiao.com/search?keyword=杨迪爆改鼠系帅哥)
+1. [长安启源A05降价 7.89万元起售](https://so.toutiao.com/search?keyword=长安启源A05降价+7.89万元起售)
+1. [重大刑案嫌疑人刘锋强落网](https://so.toutiao.com/search?keyword=重大刑案嫌疑人刘锋强落网)
+1. [党校回应文史教师岗位需运动员证书](https://so.toutiao.com/search?keyword=党校回应文史教师岗位需运动员证书)
 1. [山东男子实名举报妻子虐待婆婆致死](https://so.toutiao.com/search?keyword=山东男子实名举报妻子虐待婆婆致死)
-1. [节后飞往三亚机票价格低至200元](https://so.toutiao.com/search?keyword=节后飞往三亚机票价格低至200元)
-1. [MSCI指数迎来调整 将如何影响A股](https://so.toutiao.com/search?keyword=MSCI指数迎来调整+将如何影响A股)
+1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
+1. [民办学校开学前倒闭？教育局介入](https://so.toutiao.com/search?keyword=民办学校开学前倒闭？教育局介入)
+1. [乌议员：若不能入约就必须制造核弹](https://so.toutiao.com/search?keyword=乌议员：若不能入约就必须制造核弹)
 1. [陈思诚佟丽娅携儿子外出游玩](https://so.toutiao.com/search?keyword=陈思诚佟丽娅携儿子外出游玩)
+1. [放射肿瘤学专家王小虎教授逝世](https://so.toutiao.com/search?keyword=放射肿瘤学专家王小虎教授逝世)
+1. [媒体评零点后下高速按全程收费](https://so.toutiao.com/search?keyword=媒体评零点后下高速按全程收费)
+1. [节后飞往三亚机票价格低至200元](https://so.toutiao.com/search?keyword=节后飞往三亚机票价格低至200元)
+1. [金晨胡夏挽手遛狗](https://so.toutiao.com/search?keyword=金晨胡夏挽手遛狗)
+1. [以军宣布多条公路暂停对公众开放](https://so.toutiao.com/search?keyword=以军宣布多条公路暂停对公众开放)
+1. [贾玲更换统一公式照](https://so.toutiao.com/search?keyword=贾玲更换统一公式照)
+1. [张颂文姚安娜《猎冰》21日开播](https://so.toutiao.com/search?keyword=张颂文姚安娜《猎冰》21日开播)
+1. [证监会：严把IPO准入关](https://so.toutiao.com/search?keyword=证监会：严把IPO准入关)
 1. [李思思复工](https://so.toutiao.com/search?keyword=李思思复工)
 1. [老凤祥回应清理金手镯被擦掉logo](https://so.toutiao.com/search?keyword=老凤祥回应清理金手镯被擦掉logo)
-1. [乌议员：若不能入约就必须制造核弹](https://so.toutiao.com/search?keyword=乌议员：若不能入约就必须制造核弹)
-1. [金晨胡夏挽手遛狗](https://so.toutiao.com/search?keyword=金晨胡夏挽手遛狗)
-1. [放射肿瘤学专家王小虎教授逝世](https://so.toutiao.com/search?keyword=放射肿瘤学专家王小虎教授逝世)
+1. [媒体冷评《热辣滚烫》](https://so.toutiao.com/search?keyword=媒体冷评《热辣滚烫》)
+1. [两名日本人因偷井盖被捕](https://so.toutiao.com/search?keyword=两名日本人因偷井盖被捕)
+1. [傅园慧是被当地没有网约车坑了](https://so.toutiao.com/search?keyword=傅园慧是被当地没有网约车坑了)
+1. [俄攻陷乌军事堡垒震动美欧](https://so.toutiao.com/search?keyword=俄攻陷乌军事堡垒震动美欧)
+1. [驻蒙古国大使馆提醒加强安全防范](https://so.toutiao.com/search?keyword=驻蒙古国大使馆提醒加强安全防范)
+1. [乌克兰全境拉响防空警报](https://so.toutiao.com/search?keyword=乌克兰全境拉响防空警报)
+1. [比亚迪海豚荣耀版2月23日上市](https://so.toutiao.com/search?keyword=比亚迪海豚荣耀版2月23日上市)
+1. [加油站女子人肉占位用雪糕筒挡后车](https://so.toutiao.com/search?keyword=加油站女子人肉占位用雪糕筒挡后车)
 1. [女孩误喝防冻液医生开5瓶白酒解毒](https://so.toutiao.com/search?keyword=女孩误喝防冻液医生开5瓶白酒解毒)
+1. [长沙一公交车不允许站立乘车](https://so.toutiao.com/search?keyword=长沙一公交车不允许站立乘车)
 1. [深鞠躬告别的原市委书记被双开](https://so.toutiao.com/search?keyword=深鞠躬告别的原市委书记被双开)
-1. [证监会：严把IPO准入关](https://so.toutiao.com/search?keyword=证监会：严把IPO准入关)
+1. [《热辣滚烫》总票房破29亿](https://so.toutiao.com/search?keyword=《热辣滚烫》总票房破29亿)
+1. [学校通报女教师被指出轨学生：停职](https://so.toutiao.com/search?keyword=学校通报女教师被指出轨学生：停职)
+1. [刘雨欣回应洛杉矶家中被盗](https://so.toutiao.com/search?keyword=刘雨欣回应洛杉矶家中被盗)
+1. [贾静雯回应梧桐妹戴唇环舌环](https://so.toutiao.com/search?keyword=贾静雯回应梧桐妹戴唇环舌环)
+1. [官方回应“棋王邓有邦”流浪街头](https://so.toutiao.com/search?keyword=官方回应“棋王邓有邦”流浪街头)
+1. [MSCI指数迎来调整 将如何影响A股](https://so.toutiao.com/search?keyword=MSCI指数迎来调整+将如何影响A股)
 1. [平台回应上海飞大阪机票只要8元](https://so.toutiao.com/search?keyword=平台回应上海飞大阪机票只要8元)
-1. [贾玲更换统一公式照](https://so.toutiao.com/search?keyword=贾玲更换统一公式照)
 1. [当爸爸说电视只能在沙发上看](https://so.toutiao.com/search?keyword=当爸爸说电视只能在沙发上看)
 1. [高合汽车“倒下” 下一个轮到谁](https://so.toutiao.com/search?keyword=高合汽车“倒下”+下一个轮到谁)
-1. [民办学校开学前倒闭？教育局介入](https://so.toutiao.com/search?keyword=民办学校开学前倒闭？教育局介入)
-1. [媒体冷评《热辣滚烫》](https://so.toutiao.com/search?keyword=媒体冷评《热辣滚烫》)
-1. [傅园慧是被当地没有网约车坑了](https://so.toutiao.com/search?keyword=傅园慧是被当地没有网约车坑了)
 1. [傅莹：珍惜亚洲的长和平及经济繁荣](https://so.toutiao.com/search?keyword=傅莹：珍惜亚洲的长和平及经济繁荣)
 1. [中方回应俄反对派人士纳瓦利内去世](https://so.toutiao.com/search?keyword=中方回应俄反对派人士纳瓦利内去世)
 1. [知名浙商张杰凌晨离世](https://so.toutiao.com/search?keyword=知名浙商张杰凌晨离世)
-1. [《热辣滚烫》总票房破29亿](https://so.toutiao.com/search?keyword=《热辣滚烫》总票房破29亿)
 1. [格力电器仍由董明珠掌舵](https://so.toutiao.com/search?keyword=格力电器仍由董明珠掌舵)
 1. [中国邮政集团领导层年薪均超100万](https://so.toutiao.com/search?keyword=中国邮政集团领导层年薪均超100万)
 1. [女子称炒面中吃出体毛 商家回应](https://so.toutiao.com/search?keyword=女子称炒面中吃出体毛+商家回应)
@@ -63,9 +74,7 @@
 1. [马思纯半年瘦了50斤](https://so.toutiao.com/search?keyword=马思纯半年瘦了50斤)
 1. [媒体：美国的精准打击真的精准吗](https://so.toutiao.com/search?keyword=媒体：美国的精准打击真的精准吗)
 1. [媒体评年轻人宁愿找搭子也不走亲戚](https://so.toutiao.com/search?keyword=媒体评年轻人宁愿找搭子也不走亲戚)
-1. [已婚女子爱上顺风车车主被骗近20万](https://so.toutiao.com/search?keyword=已婚女子爱上顺风车车主被骗近20万)
 1. [浙江一企业发1500元开工红包](https://so.toutiao.com/search?keyword=浙江一企业发1500元开工红包)
-1. [比亚迪海豚荣耀版2月23日上市](https://so.toutiao.com/search?keyword=比亚迪海豚荣耀版2月23日上市)
 1. [福州市检察院依法对刘建忠决定逮捕](https://so.toutiao.com/search?keyword=福州市检察院依法对刘建忠决定逮捕)
 1. [河南进入雨雪最强时段](https://so.toutiao.com/search?keyword=河南进入雨雪最强时段)
 1. [河南省农科院专家为蔬菜生产支暖招](https://so.toutiao.com/search?keyword=河南省农科院专家为蔬菜生产支暖招)
@@ -81,16 +90,13 @@
 1. [马志勇履新黑龙江哈尔滨市委副书记](https://so.toutiao.com/search?keyword=马志勇履新黑龙江哈尔滨市委副书记)
 1. [美国男子被自养13条狗咬死](https://so.toutiao.com/search?keyword=美国男子被自养13条狗咬死)
 1. [泰安岱岳区原区委书记受贿案宣判](https://so.toutiao.com/search?keyword=泰安岱岳区原区委书记受贿案宣判)
-1. [杨迪爆改鼠系帅哥](https://so.toutiao.com/search?keyword=杨迪爆改鼠系帅哥)
 1. [春晚中60万大奖的黄冈观众无法联系](https://so.toutiao.com/search?keyword=春晚中60万大奖的黄冈观众无法联系)
 1. [河南省政府新任免一批干部](https://so.toutiao.com/search?keyword=河南省政府新任免一批干部)
 1. [杜兰特：期待看到哈利伯顿的未来](https://so.toutiao.com/search?keyword=杜兰特：期待看到哈利伯顿的未来)
 1. [字母哥：为哈利伯顿的表现感到兴奋](https://so.toutiao.com/search?keyword=字母哥：为哈利伯顿的表现感到兴奋)
-1. [长沙一公交车不允许站立乘车](https://so.toutiao.com/search?keyword=长沙一公交车不允许站立乘车)
 1. [董瀚麟：CBA很多俱乐部不专业](https://so.toutiao.com/search?keyword=董瀚麟：CBA很多俱乐部不专业)
 1. [法媒：姆巴佩加盟皇马日期还没确定](https://so.toutiao.com/search?keyword=法媒：姆巴佩加盟皇马日期还没确定)
 1. [歼20战机最新训练大片来了](https://so.toutiao.com/search?keyword=歼20战机最新训练大片来了)
-1. [专家解读大陆海警厦金海域执法行动](https://so.toutiao.com/search?keyword=专家解读大陆海警厦金海域执法行动)
 1. [2名学生全年在图书馆学习342天](https://so.toutiao.com/search?keyword=2名学生全年在图书馆学习342天)
 1. [媒体人：韦世豪转会费在500万左右](https://so.toutiao.com/search?keyword=媒体人：韦世豪转会费在500万左右)
 1. [男生过年走亲戚 被迫营业展示身材](https://so.toutiao.com/search?keyword=男生过年走亲戚+被迫营业展示身材)
